-- Application schema (H2 in Oracle compatibility mode)

CREATE TABLE tenant (
    tenant_id     VARCHAR2(10)  PRIMARY KEY,
    country_code  VARCHAR2(2)   NOT NULL,
    locale        VARCHAR2(20)  NOT NULL,
    currency      VARCHAR2(3)   NOT NULL,
    enabled       BOOLEAN       DEFAULT TRUE NOT NULL,
    config_json   CLOB,
    created_at    TIMESTAMP     DEFAULT CURRENT_TIMESTAMP NOT NULL
);

-- Pluggable onboarding contract: binds a tenant to an agreed report type.
-- Adding rows here onboards a country with no code change (PRD §3.7).
CREATE TABLE tenant_report_contract (
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id      VARCHAR2(10)  NOT NULL,
    report_type    VARCHAR2(50)  NOT NULL,
    enabled        BOOLEAN       DEFAULT TRUE NOT NULL,
    effective_from DATE,
    effective_to   DATE,
    params_json    CLOB,
    CONSTRAINT uq_tenant_report UNIQUE (tenant_id, report_type),
    CONSTRAINT fk_contract_tenant FOREIGN KEY (tenant_id) REFERENCES tenant (tenant_id)
);

CREATE TABLE account (
    account_id    VARCHAR2(40)  PRIMARY KEY,
    tenant_id     VARCHAR2(10)  NOT NULL,
    customer_name VARCHAR2(100) NOT NULL,
    eligible      BOOLEAN       DEFAULT TRUE NOT NULL,
    CONSTRAINT fk_account_tenant FOREIGN KEY (tenant_id) REFERENCES tenant (tenant_id)
);

CREATE INDEX idx_account_tenant_eligible ON account (tenant_id, eligible);

CREATE TABLE transaction (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id     VARCHAR2(10)  NOT NULL,
    account_id    VARCHAR2(40)  NOT NULL,
    business_date DATE          NOT NULL,
    amount        NUMBER(18, 2) NOT NULL,
    currency      VARCHAR2(3)   NOT NULL,
    txn_type      VARCHAR2(20)  NOT NULL,
    description   VARCHAR2(200),
    CONSTRAINT fk_txn_account FOREIGN KEY (account_id) REFERENCES account (account_id)
);

CREATE INDEX idx_txn_account_date ON transaction (account_id, business_date);

-- One row per (tenant, report_type, business_date) job key; maps to a Spring Batch JobExecution.
CREATE TABLE report_job (
    id               BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id        VARCHAR2(10) NOT NULL,
    report_type      VARCHAR2(50) NOT NULL,
    business_date    DATE         NOT NULL,
    job_execution_id BIGINT,
    status           VARCHAR2(20) NOT NULL,
    created_at       TIMESTAMP    DEFAULT CURRENT_TIMESTAMP NOT NULL,
    updated_at       TIMESTAMP    DEFAULT CURRENT_TIMESTAMP NOT NULL,
    CONSTRAINT uq_report_job_key UNIQUE (tenant_id, report_type, business_date)
);

-- One row per partition/account. The unique idempotency key guarantees one report
-- per account/day/type/tenant; status + attempt_count drive restartability (PRD §15).
CREATE TABLE report_work_unit (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    report_job_id BIGINT       NOT NULL,
    tenant_id     VARCHAR2(10) NOT NULL,
    account_id    VARCHAR2(40) NOT NULL,
    report_type   VARCHAR2(50) NOT NULL,
    business_date DATE         NOT NULL,
    status        VARCHAR2(20) NOT NULL,
    attempt_count INT          DEFAULT 0 NOT NULL,
    error_message VARCHAR2(2000),
    updated_at    TIMESTAMP    DEFAULT CURRENT_TIMESTAMP NOT NULL,
    CONSTRAINT uq_work_unit_idempotency UNIQUE (tenant_id, account_id, report_type, business_date),
    CONSTRAINT fk_work_unit_job FOREIGN KEY (report_job_id) REFERENCES report_job (id)
);

CREATE INDEX idx_work_unit_job ON report_work_unit (report_job_id);

CREATE TABLE report_artifact (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    work_unit_id BIGINT        NOT NULL,
    object_key   VARCHAR2(500) NOT NULL,
    content_type VARCHAR2(100) NOT NULL,
    size_bytes   BIGINT        NOT NULL,
    checksum     VARCHAR2(64),
    created_at   TIMESTAMP     DEFAULT CURRENT_TIMESTAMP NOT NULL,
    CONSTRAINT uq_artifact_work_unit UNIQUE (work_unit_id),
    CONSTRAINT fk_artifact_work_unit FOREIGN KEY (work_unit_id) REFERENCES report_work_unit (id)
);
